Added a service for data exchange between components

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,5 +1,11 @@
 <div class='content-wrapper'>
   <app-music-card *ngFor="let card of musicList, index as i"
                   [cardData] = "card"
-  ></app-music-card>
+                  [isActive] = "activeCard"
+                  (click)="playMusicCard(card)">
+<!--                  [ngClass]="{-->
+<!--                      'ul-eco-buttons-li': !filter.isActive,-->
+<!--                      'card-selected': filter.isActive-->
+<!--                    }"-->
+  </app-music-card>
 </div>
