--- a/src/app/components/music-card/music-card.component.scss
+++ b/src/app/components/music-card/music-card.component.scss
@@ -21,6 +21,11 @@
 
 .selected {
   box-shadow: 0 0 10px 2px #800000;
+
+  &:hover {
+    box-shadow: 0 0 10px 2px #800000;
+    cursor: pointer;
+  }
 }
 
 .song-title {
@@ -54,5 +59,4 @@
   height: 22px;
   background: #333333;
   border-radius: 5px;
-
 }
