--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -24,7 +24,7 @@
       height: 26px;
       width: 30px;
       background: #980000;
-      padding-top: 1px;
+      padding-top: 0px;
       border-radius: 4px 0 0 4px ;
     }
 
@@ -44,33 +44,129 @@
       height: 26px;
       width: 30px;
       background: #980000;
-      padding-top: 1px;
+      padding-top: 0px;
       border-radius: 0 4px 4px 0;
     }
   }
 
-  .timeline {
+  .invisible {
+    opacity: 0;
     position: relative;
     width: 800px;
     height: 26px;
-    background: #dae1e7;
+    background: linear-gradient(#757575, rgba(60, 60, 60, 0.95));
     border-radius: 6px;
     margin-right: 20px;
+    color: #ECECEC;
+  }
+
+  .timeline {
+    transition: opacity 0.5s ease;
+    transition: 2s;
+    position: relative;
+    width: 800px;
+    height: 26px;
+    background: linear-gradient(#757575, rgba(60, 60, 60, 0.95));
+    border-radius: 6px;
+    margin-right: 20px;
+    color: #ECECEC;
+
+    .timeline-data-wrapper {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 5px;
+      align-items: center;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 0.75rem;
+      font-size: 0.75rem;
+      cursor: pointer;
+
+      .current-time {
+        width: 30px;
+        cursor: pointer;
+        z-index: 5;
+      }
+
+      .song-duration {
+        width: 30px;
+        cursor: pointer;
+        z-index: 5;
+      }
+
+      .song-name {
+        line-height: 0.85rem;
+        font-size: 0.85rem;
+        cursor: pointer;
+        z-index: 5;
+      }
+    }
+
+    .playhead {
+      position: relative;
+      top: -100%;
+      z-index: 2;
+      width: 0;
+      height: 100%;
+      background: linear-gradient(to bottom, #A00000, #700000);
+      border-radius: 6px;
+    }
+
+    .hover-playhead {
+      position: relative;
+      top: -200%;
+      z-index: 3;
+      width: 0;
+      height: 100%;
+      background: rgba(100, 5, 5, 0.5);
+      border-radius: 6px;
+    }
+  }
+
+  .speaker-sound-button {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+    cursor: pointer;
   }
 
   .sound-volume {
+    -webkit-appearance: none;
     position: relative;
     width: 130px;
-    height: 20px;
-    background: midnightblue;
+    height: 3px;
+    background: #D3D3D3;
     margin-right: 20px;
+    background: #e6e6e6;
+    outline: none;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    opacity: 1;
+    border-radius: 3px;
+  }
+  .sound-volume::-webkit-slider-thumb, -moz-range-thumb, -ms-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    content: "";
+    background: #B00000;
+    height: 13px;
+    width: 13px;
+    border-radius: 100%;
+    top: 0;
+    -webkit-box-shadow: 0 2px 5px rgba(90,0,0,.25);
+    box-shadow: 0 2px 5px rgba(90,0,0,.25);
+    z-index: 10;
+    transition: all 0.2s;
   }
 
   .control-buttons {
     position: relative;
     width: 150px;
     height: 20px;
-    background: aquamarine;
+    background: #600000;
+    border-radius: 5px;
   }
 
   .button {
