--- a/src/app/components/music-card/music-card.component.scss
+++ b/src/app/components/music-card/music-card.component.scss
@@ -34,7 +34,8 @@
   font-size: 1.4rem;
   font-weight: 600;
   color: #ECECEC;
-  text-shadow: #ff0000 0 0 5px, #B00000 3px 0 3px, #B00000 -3px 0 3px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;}
+  text-shadow: #ff0000 0 0 5px, #B00000 3px 0 3px, #B00000 -3px 0 3px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
+}
 
 .song-author {
   margin-top: 0;
