--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,7 +1,13 @@
 <div class='content-wrapper'>
-  <app-music-card *ngFor="let card of musicList, index as i"
-                  [cardData] = "card"
-                  [isActive] = "activeCard"
-                  (click)="playMusicCard(card.id)">
-  </app-music-card>
+  <ng-container *ngIf="modalWindow === 'closed'">
+    <app-music-card *ngFor="let card of musicList, index as i"
+                    [cardData]="card"
+                    [isActive]="activeCard"
+                    (click)="playMusicCard(card.id)">
+    </app-music-card>
+  </ng-container>
+
+  <app-login *ngIf="modalWindow === 'login'"></app-login>
+
+  <app-register *ngIf="modalWindow === 'register'"></app-register>
 </div>
