--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <div class='header-wrapper'>
-
+  <div class="search-bar"></div>
+  <div class="login-button" (click)="clickLogin()">Login</div>
 </div>
