--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,37 @@
 .header-wrapper {
+  position: absolute;
   width: 100%;
   height: 50px;
   background:  rgba(33, 33, 33, 0.98);
   top: 0;
   left: 0;
+
+  .search-bar {
+    margin: 10px auto;
+    width: 700px;
+    height: 30px;
+    background: rgba(60, 60, 60, 1);
+    border-radius: 3px;
+  }
+
+  .login-button {
+    position: absolute;
+    right: 200px;
+    top: 10px;
+    width: 100px;
+    height: 30px;
+    background: #800000;
+    cursor: pointer;
+    font-family: 'Lato', sans-serif;
+    font-size:  1.2rem;
+    font-weight: bold;
+    color: #CACACA;
+    text-align: center;
+    border-radius: 3px;
+    padding-top: 2px;
+
+    &:hover {
+      background: #A00000;
+    }
+  }
 }
