--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -10,4 +10,6 @@
   <app-login *ngIf="modalWindow === 'login'"></app-login>
 
   <app-register *ngIf="modalWindow === 'register'"></app-register>
+
+  <app-add-song *ngIf="modalWindow === 'addSong'"></app-add-song>
 </div>
