--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -20,6 +20,11 @@
     margin: 100px auto;
     transform: translate(5px);
   }
+
+  app-add-song {
+    margin: 100px auto;
+    transform: translate(5px);
+  }
 }
 
 
