--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -34,4 +34,27 @@
       background: #A00000;
     }
   }
+
+  .add-song {
+    position: absolute;
+    left: 250px;
+    top: 10px;
+    width: 2rem;
+    height: 1.5rem;
+
+    mat-icon {
+      position: relative;
+      top: -4px;
+      font-size: 2.5rem;
+      width: 2.5rem;
+      height: 2.5rem;
+      color: #A00000;
+      cursor: pointer;
+
+      &:hover {
+        color: #CACACA;
+      }
+
+    }
+  }
 }
