--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="login-wrapper">
   <h1>Login</h1>
   <div class="close-button"><mat-icon style = "color:#CACACA" (click)="clickClose()">close</mat-icon></div>
-  <form>
+
+  <form #myForm="ngForm" (ngSubmit)="login()" ngNativeValidate>
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="name" id="name" required>
+      <input type="text" class="form-control" placeholder="name" name="name" [(ngModel)]="username" required >
 
-      <input type="password" class="form-control" placeholder="password" id="pass">
+      <input type="password" class="form-control" placeholder="password" name="pass" [(ngModel)]="password" required>
     </div>
+
     <button type="submit" class="submit-btn">Submit</button>
-
-    <button type="submit" class="register-btn" (click)="clickRegister()">Register</button>
-
   </form>
+
+  <button type="button" class="register-btn" (click)="clickRegister()">Register</button>
 </div>
