--- a/src/app/components/music-card/music-card.component.scss
+++ b/src/app/components/music-card/music-card.component.scss
@@ -17,6 +17,63 @@
     box-shadow: inset 0 2px 9px rgba(55, 55, 55, 0.90), 0 0 9px 4px rgba(33, 33, 33, 0.98);
     cursor: pointer;
   }
+
+  .song-title {
+    margin: 15px 10px 5px;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #ECECEC;
+    text-shadow: #ff0000 0 0 5px, #B00000 3px 0 3px, #B00000 -3px 0 3px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
+  }
+
+  .song-author {
+    margin-top: 0;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #ECECEC;
+    text-shadow: #B00000 0 0 15px, #B00000 5px 0 5px, #B00000 -5px 0 5px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
+  }
+
+  .song-duration {
+    margin-top: 16px;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #ECECEC;
+    text-shadow: #980000 0 0 15px, #980000 5px 0 5px, #980000 -5px 0 5px, #980000 0 3px 5px, #980000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
+  }
+
+  .song-buttons {
+    align-self: center;
+    width: 130px;
+    height: 22px;
+    background: #333333;
+    border-radius: 5px;
+
+    .close-button {
+      float: right;
+      height: 22px;
+      width: 22px;
+      cursor: pointer;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      background: #A00000;
+
+      &:hover {
+        background: #B00000;
+        color: #ECECEC;
+      }
+
+      mat-icon {
+        position: relative;
+        top: -0.5px;
+        left: -1px;
+        color: #D3D3D3;
+      }
+    }
+  }
+
 }
 
 .selected {
@@ -26,38 +83,4 @@
     box-shadow: 0 0 10px 2px #800000;
     cursor: pointer;
   }
-}
-
-.song-title {
-  margin: 15px 10px 5px;
-  text-align: center;
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: #ECECEC;
-  text-shadow: #ff0000 0 0 5px, #B00000 3px 0 3px, #B00000 -3px 0 3px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
-}
-
-.song-author {
-  margin-top: 0;
-  text-align: center;
-  font-size: 0.9rem;
-  color: #ECECEC;
-  text-shadow: #B00000 0 0 15px, #B00000 5px 0 5px, #B00000 -5px 0 5px, #B00000 0 3px 5px, #B00000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
-}
-
-.song-duration {
-  margin-top: 16px;
-  margin-bottom: 5px;
-  text-align: center;
-  font-size: 0.9rem;
-  color: #ECECEC;
-  text-shadow: #980000 0 0 15px, #980000 5px 0 5px, #980000 -5px 0 5px, #980000 0 3px 5px, #980000 0 -3px 5px, #333 10px 0 10px, #333 -10px 0 10px, #333 0 10px 10px, #333 0 -10px 10px, #333 0 0 15px;
-}
-
-.song-buttons {
-  align-self: center;
-  width: 130px;
-  height: 22px;
-  background: #333333;
-  border-radius: 5px;
 }
